move font-file in assets

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'Pixel Emulator';
-    src: url('/PixelEmulator-xq08.ttf');
+    src: url('/assets/PixelEmulator-xq08.ttf');
 }
 
 html {
